# solar-pv-forecaster

./: .gitignore  DEPLOYMENT.md  ENV.md  ISSUES.md  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/src/backend/: config.py  db.py  main.py  seed.py  site_id.py
backend/src/backend/ai_layer/: __init__.py  exceptions.py  gemini_provider.py  mock_provider.py  provider.py
backend/src/backend/analytics/: __init__.py  earnings.py  losses.py  tilt.py
backend/src/backend/api/: deps.py
backend/src/backend/api/routes/: __init__.py  ai.py  analytics.py  calibration.py  forecast.py  past.py
backend/src/backend/calibration/: __init__.py  bias.py  mae.py  service.py
backend/src/backend/data_ingestion/: __init__.py  exceptions.py  nasa_power.py  open_meteo.py  pvgis.py
backend/src/backend/models/: __init__.py  array.py  production_log.py
backend/src/backend/physics_engine/: __init__.py  pv_model.py
backend/src/backend/schemas/: __init__.py  ai.py  analytics.py  calibration.py  common.py  forecast.py
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_api_day2.py  test_api_day3.py  test_calibration.py  test_data_ingestion.py  test_gemini_provider.py  test_physics_engine.py  test_seed_and_service.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  constants.ts  index.css  settings.ts  types.ts
frontend/src/api/: client.ts
frontend/src/chat/: AiAssistantPanel.tsx
(+5 files in other folders)
