[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solar-pv-forecaster-backend"
version = "0.1.0"
description = "PV power forecasting API — weather ingestion, pvlib physics engine, calibration, AI summaries"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "pvlib>=0.11",
    "pandas>=2.2",
    "numpy>=2.0",
    "tenacity>=9.0",
    "structlog>=24.4",
    "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "freezegun>=1.5",
    "pandas-stubs>=3.0.3.260530",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]

[tool.mypy]
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "pvlib.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
